--- a/Frontend/generate_report.html
+++ b/Frontend/generate_report.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Generate Report</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
@@ -290,7 +290,7 @@
                     <p><strong>Remarks:</strong> <span id="displayRemarks"></span></p>
                     <p><strong>Date:</strong> <span id="displayDate"></span></p>
                     <p><strong>Time:</strong> <span id="displayTime"></span></p>
-                    <p><strong>Tools Used:</strong> <span id="displayTools Used"></span></p>
+                    <p><strong>Tools Used:</strong> <span id="displayToolsUsed"></span></p>
                     <p><strong>Status:</strong> <span id="displayStatus"></span></p>
 
                     <button onclick="deleteReport()">Delete Report</button>
@@ -406,7 +406,7 @@
                 <a href="./reports.html" class="view-all-btn">📋 View All Reports</a>
             </div>
 
-          
+
 
 
         </main>
