--- a/Frontend/settings.html
+++ b/Frontend/settings.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Settings</title>
   <link rel="icon" type="image/png" href="./images/logo_gpha.png">
   <link rel="stylesheet" href="./dashboard.css">
@@ -18,7 +18,7 @@
       <nav>
         <a href="./dashboard.html">📊 Dashboard</a>
         <a href="./generate_report.html">📄 Generate Report</a>
-        
+
         <a href="./tool_box.html">🛠️ Toolbox</a>
         <a href="./inventory.html">📦 Inventory</a>
         <a class="active">⚙️ Settings</a>
