--- a/Frontend/admin-reports.html
+++ b/Frontend/admin-reports.html
@@ -11,126 +11,131 @@
 </head>
 
 <body>
-    <!-- Navigation -->
-    <nav class="navbar">
-        <div class="nav-container">
-            <div class="nav-brand">
-                <img src="./images/logo_gpha.png" alt="GPHA Logo" class="logo">
-                <h2>Reports Management <span id="liveBadgeAdmin" class="live-badge"
-                        style="margin-left:8px;font-size:12px;padding:2px 8px;border-radius:12px;background:#e74c3c;color:#fff"><span
-                            class="live-dot"
-                            style="width:8px;height:8px;border-radius:50%;background:#fff;margin-right:6px;display:inline-block;animation:blink 1s infinite"></span><span
-                            class="status">OFFLINE</span></span></h2>
-            </div>
-            <div class="nav-menu">
-                <a href="./admin-dashboard.html" class="nav-link">
-                    <i class="fas fa-tachometer-alt"></i> Dashboard
+    <div class="admin-container">
+        <!-- Navbar Navigation -->
+        <nav class="navbar">
+            <div class="nav-container">
+                <a href="./admin-dashboard.html" class="nav-brand">
+                    <img src="./images/logo_gpha.png" alt="GPHA Logo">
+                    <h1>Admin Dashboard</h1>
                 </a>
-                <a href="./admin-users.html" class="nav-link">
-                    <i class="fas fa-users"></i> User Management
-                </a>
-                <a href="./admin-reports.html" class="nav-link active">
-                    <i class="fas fa-chart-bar"></i> Reports Management
-                </a>
-                <a href="./admin-inventory.html" class="nav-link">
-                    <i class="fas fa-boxes"></i> Inventory Management
-                </a>
-                <a href="./admin-toolbox.html" class="nav-link">
-                    <i class="fas fa-tools"></i> Toolbox Management
-                </a>
-                <button class="logout-btn" onclick="logout()">
-                    <i class="fas fa-sign-out-alt"></i> Logout
-                </button>
-            </div>
-        </div>
-    </nav>
 
-    <!-- Main Content -->
-    <main class="main-content">
-        <div class="page-header">
-            <h1>Reports Management</h1>
-            <div class="header-actions">
-                <button class="btn secondary" onclick="exportReports()">
-                    <i class="fas fa-download"></i> Export All
-                </button>
-            </div>
-        </div>
-
-        <!-- Report Statistics -->
-        <div class="stats-section">
-            <h3>Report Statistics</h3>
-            <div class="stats-grid">
-                <div class="stat-card">
-                    <h4>Total Reports</h4>
-                    <p id="totalReports">0</p>
-                </div>
-                <div class="stat-card">
-                    <h4>Pending</h4>
-                    <p id="pendingReports">0</p>
-                </div>
-                <div class="stat-card">
-                    <h4>In Progress</h4>
-                    <p id="inProgressReports">0</p>
-                </div>
-                <div class="stat-card">
-                    <h4>Completed</h4>
-                    <p id="completedReports">0</p>
+                <div class="nav-menu">
+                    <a href="./admin-dashboard.html" class="nav-link">
+                        <i class="fas fa-tachometer-alt"></i>
+                        Dashboard
+                    </a>
+                    <a href="./admin-users.html" class="nav-link">
+                        <i class="fas fa-users"></i>
+                        User Management
+                    </a>
+                    <a href="./admin-reports.html" class="nav-link active">
+                        <i class="fas fa-chart-bar"></i>
+                        Reports Management
+                    </a>
+                    <a href="./admin-inventory.html" class="nav-link">
+                        <i class="fas fa-boxes"></i>
+                        Inventory Management
+                    </a>
+                    <a href="./admin-toolbox.html" class="nav-link">
+                        <i class="fas fa-tools"></i>
+                        Toolbox Management
+                    </a>
+                    <button class="logout-btn" onclick="logout()">
+                        <i class="fas fa-sign-out-alt"></i>
+                        Logout
+                    </button>
                 </div>
             </div>
-        </div>
+        </nav>
 
-        <!-- Search and Filter -->
-        <div class="search-filter">
-            <div class="search-box">
-                <i class="fas fa-search"></i>
-                <input type="text" id="searchInput" placeholder="Search reports by title, location, or user..."
-                    onkeyup="searchReports()">
+        <!-- Main Content Area -->
+        <main class="main-content">
+            <div class="page-header">
+                <h1>Reports Management</h1>
+                <div class="header-actions">
+                    <button class="btn secondary" onclick="exportReports()">
+                        <i class="fas fa-download"></i> Export All
+                    </button>
+                </div>
             </div>
-            <div class="filter-box">
-                <select id="statusFilter" onchange="filterReports()" aria-label="Filter reports by status">
-                    <option value="">All Status</option>
-                    <option value="Pending">Pending</option>
-                    <option value="In Progress">In Progress</option>
-                    <option value="Completed">Completed</option>
-                </select>
+
+            <!-- Report Statistics -->
+            <div class="stats-section">
+                <h3>Report Statistics</h3>
+                <div class="stats-grid">
+                    <div class="stat-card">
+                        <h4>Total Reports</h4>
+                        <p id="totalReports">0</p>
+                    </div>
+                    <div class="stat-card">
+                        <h4>Pending</h4>
+                        <p id="pendingReports">0</p>
+                    </div>
+                    <div class="stat-card">
+                        <h4>In Progress</h4>
+                        <p id="inProgressReports">0</p>
+                    </div>
+                    <div class="stat-card">
+                        <h4>Completed</h4>
+                        <p id="completedReports">0</p>
+                    </div>
+                </div>
             </div>
-            <div class="filter-box">
-                <select id="userFilter" onchange="filterReports()" aria-label="Filter reports by user">
-                    <option value="">All Users</option>
-                </select>
+
+            <!-- Search and Filter -->
+            <div class="search-filter">
+                <div class="search-box">
+                    <i class="fas fa-search"></i>
+                    <input type="text" id="searchInput" placeholder="Search reports by title, location, or user..."
+                        onkeyup="searchReports()">
+                </div>
+                <div class="filter-box">
+                    <select id="statusFilter" onchange="filterReports()" aria-label="Filter reports by status">
+                        <option value="">All Status</option>
+                        <option value="Pending">Pending</option>
+                        <option value="In Progress">In Progress</option>
+                        <option value="Completed">Completed</option>
+                    </select>
+                </div>
+                <div class="filter-box">
+                    <select id="userFilter" onchange="filterReports()" aria-label="Filter reports by user">
+                        <option value="">All Users</option>
+                    </select>
+                </div>
             </div>
-        </div>
 
-        <!-- Reports Table -->
-        <div class="table-container">
-            <table class="data-table">
-                <thead>
-                    <tr>
-                        <th>Title</th>
-                        <th>Job Description</th>
-                        <th>Location</th>
-                        <th>User</th>
-                        <th>Status</th>
-                        <th>Date</th>
-                        <th>Tools Used</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody id="reportsTableBody">
-                    <!-- Reports will be loaded here -->
-                </tbody>
-            </table>
-        </div>
+            <!-- Reports Table -->
+            <div class="table-container">
+                <table class="data-table">
+                    <thead>
+                        <tr>
+                            <th>Title</th>
+                            <th>Job Description</th>
+                            <th>Location</th>
+                            <th>User</th>
+                            <th>Status</th>
+                            <th>Date</th>
+                            <th>Tools Used</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="reportsTableBody">
+                        <!-- Reports will be loaded here -->
+                    </tbody>
+                </table>
+            </div>
 
-        <!-- Pagination -->
-        <div class="pagination">
-            <button id="prevPage" onclick="changePage(-1)">Previous</button>
-            <span id="pageInfo">Page 1</span>
-            <button id="nextPage" onclick="changePage(1)">Next</button>
-        </div>
+            <!-- Pagination -->
+            <div class="pagination">
+                <button id="prevPage" onclick="changePage(-1)">Previous</button>
+                <span id="pageInfo">Page 1</span>
+                <button id="nextPage" onclick="changePage(1)">Next</button>
+            </div>
 
 
-    </main>
+        </main>
+    </div>
 
     <!-- Delete Confirmation Modal -->
     <div id="deleteModal" class="modal">
