--- a/Frontend/admin-users.html
+++ b/Frontend/admin-users.html
@@ -12,93 +12,94 @@
 </head>
 
 <body>
-    <!-- Navigation -->
-    <nav class="navbar">
-        <div class="nav-container">
-            <div class="nav-brand">
-                <img src="./images/logo_gpha.png" alt="GPHA Logo" class="logo">
-                <h2>User Management <span id="liveBadgeAdmin" class="live-badge"
-                        style="margin-left:8px;font-size:12px;padding:2px 8px;border-radius:12px;background:#e74c3c;color:#fff"><span
-                            class="live-dot"
-                            style="width:8px;height:8px;border-radius:50%;background:#fff;margin-right:6px;display:inline-block;animation:blink 1s infinite"></span><span
-                            class="status">OFFLINE</span></span></h2>
-            </div>
-            <div class="nav-menu">
-                <a href="./admin-dashboard.html" class="nav-link">
-                    <i class="fas fa-tachometer-alt"></i> Dashboard
-                </a>
-                <a href="./admin-users.html" class="nav-link active">
-                    <i class="fas fa-users"></i> User Management
-                </a>
-                <a href="./admin-reports.html" class="nav-link">
-                    <i class="fas fa-chart-bar"></i> Reports Management
+    <div class="admin-container">
+        <!-- Navbar Navigation -->
+        <nav class="navbar">
+            <div class="nav-container">
+                <a href="./admin-dashboard.html" class="nav-brand">
+                    <img src="./images/logo_gpha.png" alt="GPHA Logo">
+                    <h1>Admin Dashboard</h1>
                 </a>
 
-                <a href="./admin-inventory.html" class="nav-link">
-                    <i class="fas fa-chart-bar"></i> Inventory Management
-                </a>
-                <a href="./admin-toolbox.html" class="nav-link">
-                    <i class="fas fa-tools"></i> Toolbox Management
-                </a>
-                <button id="returnToAdminBtn" class="btn secondary" onclick="returnToAdmin()" style="display: none;">
-                    <i class="fas fa-user-shield"></i> Return to Admin
+                <div class="nav-menu">
+                    <a href="./admin-dashboard.html" class="nav-link">
+                        <i class="fas fa-tachometer-alt"></i>
+                        Dashboard
+                    </a>
+                    <a href="./admin-users.html" class="nav-link active">
+                        <i class="fas fa-users"></i>
+                        User Management
+                    </a>
+                    <a href="./admin-reports.html" class="nav-link">
+                        <i class="fas fa-chart-bar"></i>
+                        Reports Management
+                    </a>
+                    <a href="./admin-inventory.html" class="nav-link">
+                        <i class="fas fa-boxes"></i>
+                        Inventory Management
+                    </a>
+                    <a href="./admin-toolbox.html" class="nav-link">
+                        <i class="fas fa-tools"></i>
+                        Toolbox Management
+                    </a>
+                    <button class="logout-btn" onclick="logout()">
+                        <i class="fas fa-sign-out-alt"></i>
+                        Logout
+                    </button>
+                </div>
+            </div>
+        </nav>
+
+        <!-- Main Content Area -->
+        <main class="main-content">
+            <div class="page-header">
+                <h1>User Management</h1>
+                <button class="btn primary" onclick="showAddUserModal()">
+                    <i class="fas fa-plus"></i> Add New User
                 </button>
-                <button class="logout-btn" onclick="logout()">
-                    <i class="fas fa-sign-out-alt"></i> Logout
-                </button>
             </div>
-        </div>
-    </nav>
 
-    <!-- Main Content -->
-    <main class="main-content">
-        <div class="page-header">
-            <h1>User Management</h1>
-            <button class="btn primary" onclick="showAddUserModal()">
-                <i class="fas fa-plus"></i> Add New User
-            </button>
-        </div>
-
-        <!-- Search and Filter -->
-        <div class="search-filter">
-            <div class="search-box">
-                <i class="fas fa-search"></i>
-                <input type="text" id="searchInput" placeholder="Search users..." onkeyup="searchUsers()">
+            <!-- Search and Filter -->
+            <div class="search-filter">
+                <div class="search-box">
+                    <i class="fas fa-search"></i>
+                    <input type="text" id="searchInput" placeholder="Search users..." onkeyup="searchUsers()">
+                </div>
+                <div class="filter-box">
+                    <select id="roleFilter" onchange="filterUsers()" aria-label="Filter users by role">
+                        <option value="">All Roles</option>
+                        <option value="admin">Admin</option>
+                        <option value="staff">Staff</option>
+                    </select>
+                </div>
             </div>
-            <div class="filter-box">
-                <select id="roleFilter" onchange="filterUsers()" aria-label="Filter users by role">
-                    <option value="">All Roles</option>
-                    <option value="admin">Admin</option>
-                    <option value="staff">Staff</option>
-                </select>
+
+            <!-- Users Table -->
+            <div class="table-container">
+                <table class="data-table">
+                    <thead>
+                        <tr>
+                            <th>Staff ID</th>
+                            <th>Email</th>
+                            <th>Role</th>
+                            <th>Created Date</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="usersTableBody">
+                        <!-- Users will be loaded here -->
+                    </tbody>
+                </table>
             </div>
-        </div>
 
-        <!-- Users Table -->
-        <div class="table-container">
-            <table class="data-table">
-                <thead>
-                    <tr>
-                        <th>Staff ID</th>
-                        <th>Email</th>
-                        <th>Role</th>
-                        <th>Created Date</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody id="usersTableBody">
-                    <!-- Users will be loaded here -->
-                </tbody>
-            </table>
-        </div>
-
-        <!-- Pagination -->
-        <div class="pagination">
-            <button id="prevPage" onclick="changePage(-1)">Previous</button>
-            <span id="pageInfo">Page 1</span>
-            <button id="nextPage" onclick="changePage(1)">Next</button>
-        </div>
-    </main>
+            <!-- Pagination -->
+            <div class="pagination">
+                <button id="prevPage" onclick="changePage(-1)">Previous</button>
+                <span id="pageInfo">Page 1</span>
+                <button id="nextPage" onclick="changePage(1)">Next</button>
+            </div>
+        </main>
+    </div>
 
     <!-- Task Management Section -->
 
